--- a/src/app/watch-film/watch-film.component.html
+++ b/src/app/watch-film/watch-film.component.html
@@ -4,79 +4,43 @@
   <div class="pt-10">
     <!-- Breadcrumb -->
     <div class="flex" aria-label="Breadcrumb">
-      <ol
-        class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse"
-      >
+      <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
         <li class="inline-flex items-center">
-          <a
-            href="#"
-            class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white"
-          >
-            <svg
-              class="w-3 h-3 me-2.5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              viewBox="0 0 20 20"
-            >
+          <a href="#"
+            class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600 dark:text-gray-400 dark:hover:text-white">
+            <svg class="w-3 h-3 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+              viewBox="0 0 20 20">
               <path
-                d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z"
-              />
+                d="m19.707 9.293-2-2-7-7a1 1 0 0 0-1.414 0l-7 7-2 2a1 1 0 0 0 1.414 1.414L2 10.414V18a2 2 0 0 0 2 2h3a1 1 0 0 0 1-1v-4a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v4a1 1 0 0 0 1 1h3a2 2 0 0 0 2-2v-7.586l.293.293a1 1 0 0 0 1.414-1.414Z" />
             </svg>
             Home
           </a>
         </li>
         <li>
           <div class="flex items-center">
-            <svg
-              class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 6 10"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 9 4-4-4-4"
-              />
+            <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+              fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="m1 9 4-4-4-4" />
             </svg>
-            <a
-              href="#"
-              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white"
-              >Projects</a
-            >
+            <a href="#"
+              class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Projects</a>
           </div>
         </li>
         <li aria-current="page">
           <div class="flex items-center">
-            <svg
-              class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 6 10"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m1 9 4-4-4-4"
-              />
+            <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+              fill="none" viewBox="0 0 6 10">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="m1 9 4-4-4-4" />
             </svg>
-            <span
-              class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400"
-              >Flowbite</span
-            >
+            <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Flowbite</span>
           </div>
         </li>
       </ol>
     </div>
 
-    <div class="w-full flex items-center mt-3 mb-5">
+    <div class="w-full flex items-center mt-20 mb-5">
       <div class="w-11/12 bg-yellow-400 rounded-lg">
         <p class="my-2 ml-6 font-semibold">
           If you get any error message when trying to stream, please Refresh the
@@ -87,25 +51,16 @@
 
     <!-- video Player -->
 
-    <iframe
-      class="w-11/12"
-      height="600px"
-      src="https://www.youtube-nocookie.com/embed/EYmbPYWlyVk?si=wo92kv0a9K6YjWAe"
-      title="YouTube video player"
-      frameborder="0"
+    <iframe class="w-11/12" height="600px" src="https://www.youtube-nocookie.com/embed/EYmbPYWlyVk?si=wo92kv0a9K6YjWAe"
+      title="YouTube video player" frameborder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      referrerpolicy="strict-origin-when-cross-origin"
-      allowfullscreen
-    ></iframe>
+      referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   </div>
 
-  <div class=" mt-10 flex flex-col lg:flex-row">
+  <div class=" mt-20 mb-20 flex flex-col lg:flex-row">
     <div class="hidden xl:block">
-      <img
-      class="rounded-lg shadow"
-        width="350px"
-        src="https://images.justwatch.com/poster/305436330/s166/fast-x.webp"
-      />
+      <img class="rounded-lg shadow" width="350px"
+        src="https://images.justwatch.com/poster/305436330/s166/fast-x.webp" />
     </div>
 
     <div class="lg:ml-5">
@@ -113,16 +68,14 @@
         <p class="text-4xl">Fast X</p>
       </div>
       <div class="mt-2">
-        <button
-          type="button"
-          class="py-2.5 px-5 border border-gray-700 font-bold me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
-        >
+        <button type="button"
+          class="py-2.5 px-5 border border-gray-700 font-bold me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
           HD
         </button>
       </div>
 
       <div class="mt-3">
-        <p class="font-semibold">
+        <p class="text-gray-700">
           Tenth and final installment of the Fast and Furious franchise.
         </p>
       </div>
@@ -165,45 +118,35 @@
     <div class="lg:w-5/12 flex items-start">
       <div class="relative inline-flex w-64 group mt-5">
         <div
-          class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt"
-        ></div>
-        <a
-          href="#"
-          title="Get quote now"
+          class="absolute transitiona-all duration-1000 opacity-70 -inset-px bg-gradient-to-r from-[#44BCFF] via-[#FF44EC] to-[#FF675E] rounded-xl blur-lg group-hover:opacity-100 group-hover:-inset-1 group-hover:duration-200 animate-tilt">
+        </div>
+        <a href="#" title="Get quote now"
           class="relative w-full inline-flex items-center justify-center px-8 py-4 text-lg font-bold text-white transition-all duration-200 bg-gray-900 font-pj rounded-xl focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900"
-          role="button"
-          >+ Add Favourite
+          role="button">+ Add Favourite
         </a>
       </div>
     </div>
   </div>
   <div class="w-2/6">
-    <hr class="h-px my-12 bg-gray-900 border-0 dark:bg-gray-700" />
+    <hr class="h-px my-20 bg-gray-900 border-0 dark:bg-gray-700" />
   </div>
 
-  <div class="w-full mb-5">
-    <div class="mb-8">
-        <p class="text-3xl font-semibold">You may also like</p>
+  <div class="w-full mb-5 mt-20">
+    <div class="">
+      <p class="text-3xl font-semibold">You may also like</p>
     </div>
 
-    <div class="grid grid-cols-5 gap-6">
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
-        <app-cards></app-cards>
+    <div class="w-full flex flex-wrap gap-3 mt-10">
+      <app-cards Width="w-52" Height="300" />
+      <app-cards Width="w-52" Height="300" />
+      <app-cards Width="w-52" Height="300" />
+      <app-cards Width="w-52" Height="300" />
+      <app-cards Width="w-52" Height="300" />
+      <app-cards Width="w-52" Height="300" />
+
     </div>
 
   </div>
 </div>
 
+<app-footer></app-footer>
