--- a/src/app/component/nav-bar/nav-bar.component.html
+++ b/src/app/component/nav-bar/nav-bar.component.html
@@ -1,13 +1,13 @@
 
 
-<nav class="bg-gray-800 border-gray-200 dark:bg-gray-900 md:w-full z-50">
+<nav class="bg-gray-800 border-gray-200 dark:bg-gray-900 xl:w-full z-50">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
       <span class="self-center text-2xl font-semibold whitespace-nowrap text-white">MoviesHUB</span>
   </a>
-  <div class="flex md:order-1 md:w-6/12">
-    <div class="relative hidden md:block w-full">
+  <div class="flex xl:order-1 xl:w-6/12">
+    <div class="relative hidden xl:block w-full">
       <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
         <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
           <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
@@ -16,15 +16,15 @@
       </div>
       <input type="text" id="search-navbar" class="block w-full bg-transparent outline-none focus:ring-transparent p-2 ps-10 text-sm border-t-0 border-r-0 border-l-0 border-b-2 border-gray-300 focus:border-b-amber-500 placeholder-gray-400 text-white" placeholder="Search...">
     </div>
-    <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-search" aria-expanded="false">
+    <button data-collapse-toggle="navbar-search" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg xl:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-search" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
   </div>
-    <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-search">
-      <div class="relative mt-3 md:hidden">
+    <div class="items-center justify-between hidden w-full xl:flex xl:w-auto lg:order-1" id="navbar-search">
+      <div class="relative mt-3 lg:hidden">
         <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
           <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
@@ -32,20 +32,27 @@
         </div>
         <input type="text" id="search-navbar" class="block w-full p-2 ps-10 text-sm text-gray-100 border border-gray-300 rounded-lg  focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400  dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search...">
       </div>
-      <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg  md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0  dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+      <ul class="flex flex-col p-4 xl:p-0 mt-4 font-medium border border-gray-100 rounded-lg  xl:space-x-8 rtl:space-x-reverse xl:flex-row xl:mt-0 xl:border-0  dark:bg-gray-800 xl:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="#" class="block py-2 px-3 text-white rounded md:bg-transparent md:text-white md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+          <a href="#" class="block py-2 px-3 text-gray-100 rounded xl:bg-transparent xl:text-gray-100 xl:p-0 xl:dark:text-blue-500" aria-current="page">Home</a>
         </li>
         <li>
-          <a href="./films" class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-white md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">All Films</a>
+          <a href="./films" class="block py-2 px-3 text-gray-100 rounded hover:bg-gray-100 xl:hover:bg-transparent xl:hover:text-white xl:p-0 xl:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white xl:dark:hover:bg-transparent dark:border-gray-700">All Films</a>
         </li>
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-300 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-white md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+          <a href="#" class="block py-2 px-3 text-gray-100 rounded hover:bg-gray-100 xl:hover:bg-transparent xl:hover:text-white xl:p-0 dark:text-white xl:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white xl:dark:hover:bg-transparent dark:border-gray-700">About</a>
         </li>
         <li>
           <div>
             <button type="button" data-dropdown-toggle="auth" class="inline-flex items-center font-medium justify-center text-sm text-gray-100 dark:text-white rounded-lg cursor-pointer hover:text-white">
-              <i class="bi bi-person-circle text-2xl ml-3"></i> 
+              <i class="bi bi-heart-fill text-1xl ml-3 text-red-600"></i> 
+            </button>
+          </div>
+        </li>
+        <li>
+          <div>
+            <button type="button" data-dropdown-toggle="auth" class="inline-flex items-center font-medium justify-center text-sm text-gray-100 dark:text-white rounded-lg cursor-pointer hover:text-white">
+              <i class="bi bi-person-circle text-1xl ml-3"></i> 
             </button>
             <div class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700" id="auth">
               <ul class="py-2 font-medium" role="none">
