admin update film page created

--- a/src/app/admin-home/admin-home.component.html
+++ b/src/app/admin-home/admin-home.component.html
@@ -85,7 +85,7 @@
      </div>
   </aside>
   
-  <div class="p-4 sm:ml-64 mt-16">
+  <div class="p-4 sm:ml-64 pt-20">
     <ng-content></ng-content>
     <router-outlet></router-outlet> 
   </div>
