--- a/src/app/component/admin-manage-movies/admin-manage-movies.component.html
+++ b/src/app/component/admin-manage-movies/admin-manage-movies.component.html
@@ -17,9 +17,9 @@
 
         </div>
         <div class="flex justify-end mx-auto w-6/12">
-            <button type="button"
+            <a href="admin/manage-Films/add"
                 class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Add
-                Movies</button>
+                Movies</a>
         </div>
     </div>
 
