--- a/src/app/component/admin-manage-users/admin-manage-users.component.html
+++ b/src/app/component/admin-manage-users/admin-manage-users.component.html
@@ -36,7 +36,7 @@
                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
                         Add New User
                     </h3>
-                    <button type="button"
+                    <button type="button" (click)="onResetAdduserFrom()"
                         class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
                         data-modal-hide="authentication-modal">
                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -233,7 +233,7 @@
                                     <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
                                         Update User
                                     </h3>
-                                    <button type="button"
+                                    <button type="button" (click)="onResetUpdateuserFrom()"
                                         class="end-2.5 text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white"
                                         data-modal-hide="authentication-modal2">
                                         <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
